# open-tr069

./: .gitignore  HowToBuild.md  HowToUnitTest.md  Makefile.am  ProjectHome.md  README  autogen.sh  configure.ac
data/: tr098_data.xml  tr098_model.xml  tr181_data.xml  tr181_model.xml
embunit/: Makefile.am
embunit/embUnit/: config.h  makefile
evcpe/: .gitignore  .project  Makefile  access_list.c  accessor.c  accessor.h  add_object.h  add_object_xml.c  add_object_xml.h  attr.h  attr_schema.c  attr_xml.c  attr_xml.h  base.h  class.c  class.h  class_xml.c  class_xml.h  constraint.c  constraint.h  cookie.c  cookie.h  cpe.c  data.h  delete_object.c  delete_object.h  dns.c  dns_cache.c  error.h  evcpe-internal.h  evcpe.c  evcpe.h  event_list.c  fault.c  fault.h  fault_xml.c  fault_xml.h  get_param_attrs.c  get_param_attrs.h  get_param_names.c  (+54 more)
evcpe/embunit/: makefile
evcpe/embunit/embUnit/: makefile
evcpe/embunit/samples/: personTest.c
evcpe/embunit/textui/: CompilerOutputter.c  Outputter.h  TextOutputter.c  XMLOutputter.h  makefile
evcpe/test/: test_cookie.c  test_cpe.c  test_model_xml.c  test_repo.c  test_suite.c  test_suite.h  test_url.c
evcpe/testfiles/: delete_object.xml  set_parameter_values.xml  tr098_data.xml  tr098_model.xml
src/: Makefile.am  access_list.c  accessor.c  accessor.h  add_object.c  add_object.h  add_object_xml.c  add_object_xml.h  attr.c  attr.h  attr_schema.c  attr_schema.h  attr_xml.c  attr_xml.h  change_du_state.c  change_du_state.h  class.c  class.h  class_xml.c  class_xml.h  constraint.c  constraint.h  cookie.c  cookie.h  data.c  data.h  data_xml.c  data_xml.h  delete_object.c  delete_object.h  dns_cache.c  dns_cache.h  download.c  download.h  error.h  evcpe.c  evcpe.h  fault.c  fault.h  get_param_attrs.c  (+62 more)
src/plugins/: Makefile.am  worker.c
tests/: Makefile.am  test_cookie.c  test_cpe.c  test_model_xml.c  test_msg_xml.c  test_obj.c  test_repo.c  test_suite.c  test_url.c
tests/testfiles/: add_object.xml  get_parameter_attributes.xml  set_parameter_values.xml  tr098_data.xml  tr098_model.xml
trunk/: accessor.h  add_object.c  attr_schema.h  attr_xml.c  class_xml.c  constraint.h  cpe.c  cpe.h  data_xml.c  delete_object.h  dns.c  dns.h  evcpe-config.h  get_param_names.h  get_param_names_xml.c  get_param_names_xml.h  get_param_values.c  get_rpc_methods.c  inform.c  inform_xml.c  log.h  method_list.c  msg.c  msg.h  obj.c  obj_xml.h  param_info_list.c  persister.h  request.h  set_param_attr_list.c  set_param_values.c  set_param_values_xml.c  util.h  xml.c  xml.h  xml_stack.c  xmlns.h
trunk/embunit/samples/: counter.c  person.c  person.h
trunk/embunit/textui/: XMLOutputter.c
trunk/evcpe/: .cproject  accessor.c  add_object.c  add_object.h  add_object_xml.c  attr.c  attr_schema.c  attr_xml.c  attr_xml.h  base.h  constraint.h  cookie.h  cpe.h  data_xml.c  data_xml.h  delete_object.c  dns.h  dns_cache.h  evcpe-config.h  evcpe.c  fault.c  fault.h  get_param_attrs.h  get_param_names.c  get_param_names_xml.c  get_param_values.c  get_param_values_xml.c  get_param_values_xml.h  get_rpc_methods.c  get_rpc_methods_xml.c  get_rpc_methods_xml.h  handler.c  http.h  inform.c  inform_xml.c  method.c  method.h  minixml.c  minixml.h  msg_xml.c  (+20 more)
trunk/evcpe/embunit/samples/: counter.h  counterTest.c
trunk/evcpe/embunit/textui/: CompilerOutputter.h  TextOutputter.h
trunk/evcpe/test/: test_msg_xml.c  test_obj.c  test_repo.c  test_suite.c  test_suite.h
trunk/evcpe/testfiles/: get_parameter_names.xml  get_parameter_names_all.xml  get_parameter_names_simple.xml  get_parameter_values.xml  get_parameter_values_response.xml  get_rpc_methods.xml  get_rpc_methods_response.xml  inform_response.xml
trunk/test/: test_obj.c  test_suite.c
trunk/testfiles/: fault.xml  set_parameter_attributes.xml  tr098_data.xml  tr098_model.xml
wiki/: HowToBuild.wiki  HowToUnitTest.wiki
